ndb - bug#47171   ndbd could crash on MaxNoOfOpenFiles during REDO invalidation     due to careless opening of files